Copy n Paste keyframes and poses broken? #29015

Closed
opened 2011-10-24 14:42:17 +02:00 by Reiner Prokein · 4 comments

%%%r41209 64 Bit, Win 7, 64 Bit

I cannot longer simply copy n paste keyframes and poses. I get a No keyframes to paste warning when i try to paste a copied keyframe in the dope sheet. Same with poses, nothing happens.The same procedure works with an older Blender build though, in this case 38255. So i dont think i do anything wrong here. I can get the keyframe to copy and paste by selecting the whole skeleton. But shouldnt copy a selected keyframe select and copy all the keyframes in it, without the need to grab the corresponding bones in the workspace? As told, it works fine in older builds. There i just select the keyframe, copy it, and paste it at the destination location.

Attached the file where it happens.%%%

%%%r41209 64 Bit, Win 7, 64 Bit I cannot longer simply copy n paste keyframes and poses. I get a No keyframes to paste warning when i try to paste a copied keyframe in the dope sheet. Same with poses, nothing happens.The same procedure works with an older Blender build though, in this case 38255. So i don`t think i do anything wrong here. I can get the keyframe to copy and paste by selecting the whole skeleton. But shouldn`t copy a selected keyframe select and copy all the keyframes in it, without the need to grab the corresponding bones in the workspace? As told, it works fine in older builds. There i just select the keyframe, copy it, and paste it at the destination location. Attached the file where it happens.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The real "error" here is that it simply requires some F-Curves to be selected before it tries to do anything.

However, several fixes can happen here:

  1. The error messages however are a bit misleading, and that is something that I'll fix, since it's definitely not giving the error messages intended.
  2. Perhaps an alternative behaviour for the "nothing selected" case is needed, where we just paste back into the original curves again (this kindof duplicates the shift-d "duplicate" functionality though, but I guess this might be a cause of confusion for new users used to just thinking in terms of "copy and paste"?). Will mull over this one a bit more...%%%
%%%The real "error" here is that it simply requires some F-Curves to be selected before it tries to do anything. However, several fixes can happen here: 1) The error messages however are a bit misleading, and that is something that I'll fix, since it's definitely not giving the error messages intended. 2) Perhaps an alternative behaviour for the "nothing selected" case is needed, where we just paste back into the original curves again (this kindof duplicates the shift-d "duplicate" functionality though, but I guess this might be a cause of confusion for new users used to just thinking in terms of "copy and paste"?). Will mull over this one a bit more...%%%
Member

%%%Fixed the error messages in svn.

As for the second fix mentioned, it's probably more of a slight inconvenience rather than an oversight/unintended behaviour. So I think I'll leave things the way they are here for now, and we can re-evaluate this again later.%%%

%%%Fixed the error messages in svn. As for the second fix mentioned, it's probably more of a slight inconvenience rather than an oversight/unintended behaviour. So I think I'll leave things the way they are here for now, and we can re-evaluate this again later.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29015
No description provided.